# SFMS-12-cs-class-prog

./: .gitignore  README.md  main.py  pyproject.toml
info_files/: connection.json
info_files/logs/: 2026-02-02_19-33-37-690804.txt  2026-02-02_19-35-12-424098.txt  placeholder.txt
src/: db.py  main.py  test.py
src/db/: db.py
src/interface/: interface.py  menu.py
